--- a/releases/dev/podinfo.yaml
+++ b/releases/dev/podinfo.yaml
@@ -15,8 +15,8 @@ spec:
     ref: master
   values:
     image:
-      repository: stefanprodan/podinfo
-      tag: dev-hdtwcel9
+      repository: dmcconnachie/podinfo
+      tag: dev-rggkbz3w
     replicaCount: 1
     hpa:
       enabled: false
