--- a/releases/stg/podinfo.yaml
+++ b/releases/stg/podinfo.yaml
@@ -15,8 +15,8 @@ spec:
     ref: master
   values:
     image:
-      repository: stefanprodan/podinfo
-      tag: stg-9ij63o4c
+      repository: dmcconnachie/podinfo
+      tag: stg-rhob8qhj
     replicaCount: 2
     hpa:
       enabled: true
